# nateTech-python

learn-gemini-model/: main.py  pyproject.toml  test_tiktoken.py
learn-gemini-model/src/gemini-demo/: vec-find-like.py  vec-model-preview.py
learning_gemini/: README.md  main.py  pyproject.toml
learning_model/work_with_model/: BBPE.js  BBPE.py  BPE.js  BPE.py  BPE_EXPLANATION.md
